@@ -1,4 +1,8 @@
 2014-10-01  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Status.pm: Fix perl warning.
+	* server-src/amstatus.pl: Fix perl warning.
+
+2014-10-01  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Rest/Labels.pm, perl/Amanda/Rest/Storages/Labels.pm
 	  (list): add filter on datestamp.
 
